--- a/xino-datalayer/pom.xml
+++ b/xino-datalayer/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>vaadin-spring-ext-security</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>com.vaadin</groupId>-->
         <!--<artifactId>vaadin-compatibility-server</artifactId>-->
